--- a/index.html
+++ b/index.html
@@ -1,1 +1,163 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+<html>
+<head>
+<div align="left"><img src="NSU.png" alt="North South University" align="left" height="200" width="200"></div>
+<br>
+<div align="left">
+<h1 style="text-align:left;">WAASAY ANWAR-CSE482L: Summer-19_Section7</h1>
+<h1 style="text-align:left;">Summer 2019</h1>
+</div>
+</head>
+<body>
+<br>
+<h2><strong>Faculty Member: Dr. M. Arifur Rahman (MAh1)<br>
+Lab Instructor: Asif Ahmed Neloy<br>
+Office Room: TBA<br>
+Email: asif.neloy@northsouth.edu</strong></h2>
+<h2>Office Hours: Monday (M) 12:00 pm – 1:30 pm<br>
+Wednesday (W) 12:00 pm - 1:30 pm<br>
+Class Hours: Sunday (S) 2:40 pm - 5:50 pm<br>
+Classroom: LIB605</h2>
+<h3 style="text-align:center;">Piazza Access Code: cse482aan</h3>
+<h3><strong>Course Description:</strong></h3>
+<p style="text-align: justify;">
+To introduce a student with the modern web development techniques in order to develop state-of-theart web applications and that can be scalable with ease. The course provides a comprehensive
+overview of both front-end and back-end technologies like HTML5, CSS3, JavaScript, PHP and
+MYSQL. Upon completing the course, a learner will have a concise understanding of server- side and
+client-side programming knowledge.
+</p>
+<h2><strong>Marks Distribution:</strong></h2>
+<table style="width:100%">
+  <tr>
+    <th>Class Attendance:</th>
+	<th>Lab Assessment:</th>
+	<th>*Project:</th>
+	<th>Quiz (two): </th>
+	<th>Midterm Exam: </th>
+	<th>Final:</th>
+    
+  </tr>
+  <tr>
+    <td>10%</td>
+    <td>10%</td>
+    <td>20%</td>
+	<td>10%</td>
+	<td>20%</td>
+	<td>30%</td>
+	
+  </tr>  
+<h2 style="text-align:center;"><i>The marks distribution may change according to the discretion of the instructor.</i></h2>
+</table>
+<h2><strong>Tentative Class Schedule:</strong></h2>
+<table style="width:100%">
+  
+
+  <tr>
+    <td>Week 1</td>
+    <td>Lab 1</td>
+    <td>Introduction To HTML</td>
+	
+  </tr>  
+  <tr>
+    <td>Week 2</td>
+    <td>Lab 2</td>
+    <td>Introduction to CSS</td>
+	
+  </tr>  
+  <tr>
+    <td>Week 3</td>
+    <td>Lab 3</td>
+    <td>Basic JavaScript + Checkpoint 1</td>
+	
+  </tr>  
+  <tr>
+    <td>Week 4</td>
+    <td>Lab 4</td>
+    <td>JavaScript Details</td>
+	
+  </tr>   
+  <tr>
+    <td><strong>Week 5</strong></td>
+    <td><strong>Lab 5</strong></td>
+    <td><strong>Introduction to PHP + Mid</strong></td>
+	
+  </tr>  
+  <tr>
+    <td>Week 6</td>
+    <td>Lab 6</td>
+    <td>Database Handling + Checkpoint 2</td>
+	
+  </tr> 
+<tr>
+    <td>Week 7</td>
+    <td>Lab 7</td>
+    <td>Basic Ajax and XML</td>
+	
+  </tr>
+<tr>
+    <td>Week 8</td>
+    <td>Lab 8</td>
+    <td>Ajax with Database + Checkpoint 3</td>
+	
+  </tr>
+<tr>
+    <td>Week 9</td>
+    <td>Lab 9</td>
+    <td>Ajax Live Search and Rest Service + Checkpoint 4</td>
+	
+  </tr>
+<tr>
+    <td><strong>Week 10</strong></td>
+    <td><strong>Lab 10</strong></td>
+    <td><strong>Final + Project Demonstration</strong></td>
+	
+  </tr>
+</table>
+<h2><strong>Class Attendance:</strong></h2>
+<p style="text-align: justify;">
+Attendance is mandatory for lab classes. Attendance will be taken at the
+beginning of the class. If you enter the class 10 minutes late, you will get a late attendance. If you
+come to the class 30 minutes late you will be considered as absent. Two late attendances equal to
+one absent.
+</p>
+<h2><strong>Exams and Quizzes:</strong></h2>
+<p style="text-align: justify;">
+Exams and quizzes will be closed book and closed notes. No electronic
+devices except non-programmable calculators will be allowed during exams. Calculators cannot
+be shared with friends. Nobody will be allowed to go outside the exam hall. There will be no
+makeup quizzes.
+</p>
+<h2><strong>Lab Report:</strong></h2>
+<p style="text-align: justify;">
+You have to submit Lab reports at the beginning of the class when it is due. If you
+miss this deadline, your points will be reduced by 40% for next day submission. If you miss the
+next day’s deadline, your will get zero credit for that Lab report. All the Lab reports should be
+done and submitted individually. You may take guidance from your friend but are not allowed to
+copy lab reports especially the discussion part.
+</p>
+<h2><strong>Class Etiquette:</strong></h2>
+<p style="text-align: justify;">
+Distracting others in lab class is violating others rights to be attentive. So, laptop
+or cell phones cannot be turned on during class time. Group discussion is encouraged and personal
+discussion is discouraged during class time.
+</p>
+<h2><strong>General Course Administration:</strong></h2>
+<p style="text-align: justify;">
+I’ll provide the lab manual and you’ll have to complete the
+given tasks during the class time. Last 30 minutes of the class is fixed for checking and grading.
+I’ll explain the problems at the beginning of the class and you can ask me at any point of the class,
+if you need any additional information.
+</p>
+<h2><strong>Academic Honesty:</strong></h2>
+<p style="text-align: justify;">
+Any means of unauthorized assistance in preparing materials which a student
+submits as original work is deemed to be cheating. Any kind of cheating or plagiarism will make
+your obtained marks zero for that report, assignment, quiz or exam. Both who copied and who let
+others copy will be treated as same, meaning both will get zero for that report, assignment, quiz or
+exam
+</p>
+<h2 style="text-align:center;"><i>** If you fail to get 60% marks (12 out of 20) in the lab,
+you will also get a F in the course **</i></h2>
+
+</body>
+</html>
