--- a/index.html
+++ b/index.html
@@ -56,61 +56,61 @@ client-side programming knowledge.
   <tr>
     <td>Week 1</td>
     <td>Lab 1</td>
-    <td>Introduction To HTML</td>
+    <td>Introduction To HTML<a href="">See Details</a></td>
 	
   </tr>  
   <tr>
     <td>Week 2</td>
     <td>Lab 2</td>
-    <td>Introduction to CSS</td>
+    <td>Introduction to CSS<a href="">See Details</a></td>
 	
   </tr>  
   <tr>
     <td>Week 3</td>
     <td>Lab 3</td>
-    <td>Basic JavaScript + Checkpoint 1</td>
+    <td>Basic JavaScript + Checkpoint 1<a href="">See Details</a></td>
 	
   </tr>  
   <tr>
     <td>Week 4</td>
     <td>Lab 4</td>
-    <td>JavaScript Details</td>
+    <td>JavaScript Details<a href="">See Details</a></td>
 	
   </tr>   
   <tr>
     <td><strong>Week 5</strong></td>
     <td><strong>Lab 5</strong></td>
-    <td><strong>Introduction to PHP + Mid</strong></td>
+    <td><strong>Introduction to PHP + Mid</strong><a href="">See Details</a></td>
 	
   </tr>  
   <tr>
     <td>Week 6</td>
     <td>Lab 6</td>
-    <td>Database Handling + Checkpoint 2</td>
+    <td>Database Handling + Checkpoint 2<a href="">See Details</a></td>
 	
   </tr> 
 <tr>
     <td>Week 7</td>
     <td>Lab 7</td>
-    <td>Basic Ajax and XML</td>
+    <td>Basic Ajax and XML<a href="">See Details</a></td>
 	
   </tr>
 <tr>
     <td>Week 8</td>
     <td>Lab 8</td>
-    <td>Ajax with Database + Checkpoint 3</td>
+    <td>Ajax with Database + Checkpoint 3<a href="">See Details</a></td>
 	
   </tr>
 <tr>
     <td>Week 9</td>
     <td>Lab 9</td>
-    <td>Ajax Live Search and Rest Service + Checkpoint 4</td>
+    <td>Ajax Live Search and Rest Service + Checkpoint 4<a href="">See Details</a></td>
 	
   </tr>
 <tr>
     <td><strong>Week 10</strong></td>
     <td><strong>Lab 10</strong></td>
-    <td><strong>Final + Project Demonstration</strong></td>
+    <td><strong>Final + Project Demonstration<a href="">See Details</a></strong></td>
 	
   </tr>
 </table>
