--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ client-side programming knowledge.
   <tr>
     <td>Week 3</td>
     <td>Lab 3</td>
-    <td>Basic JavaScript + Checkpoint 1<a href="">&nbsp"See Details"</a></td>
+    <td>Basic JavaScript + Checkpoint 1<a href="https://github.com/waasayanwar/CSE482_Summer-19_Section7/blob/master/lab%2003/calc.html">&nbsp"See Details"</a></td>
 	
   </tr>  
   <tr>
