--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ client-side programming knowledge.
   </tr>  
 <h2 style="text-align:center;"><i>The marks distribution may change according to the discretion of the instructor.</i></h2>
 </table>
-<h2><strong>Tentative Class Schedule:</strong></h2>
+<h2><strong>Homeworks & Checkpoints:</strong></h2>
 <table style="width:100%">
   
 
